--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.9.0",
-    "cors": "^2.8.5"
+    "nodemailer": "^7.0.10",
+    "uuid": "^13.0.0"
   }
 }
